@@ -8,15 +8,15 @@
  * Controls an audio ADC/DAC (8 and 16 bit)
  */
 
-#include <math.h>
-
 #include "ADCDAC.h"
-#include "AudioInterface.h"
+#include "ControlBus.h"
 
 ADCDAC::ADCDAC()
 {
 	audio = NULL;
 	controlBus = NULL;
+    
+    audioBuffer = NULL;
 }
 
 bool ADCDAC::setRef(string name, OEComponent *ref)
@@ -40,15 +40,23 @@ bool ADCDAC::setRef(string name, OEComponent *ref)
 void ADCDAC::notify(OEComponent *sender, int notification, void *data)
 {
 	// To-Do: Implement simulation
+    audioBuffer = (AudioBuffer *)data;
 }
 
 OEUInt8 ADCDAC::read(OEAddress address)
 {
+    float audioBufferIndex;
+    
+    controlBus->postMessage(this, CONTROLBUS_GET_AUDIOBUFFERINDEX, &audioBufferIndex);
+    
 	return 0;
 }
 
 void ADCDAC::write(OEAddress address, OEUInt8 value)
 {
+    float audioBufferIndex;
+    
+    controlBus->postMessage(this, CONTROLBUS_GET_AUDIOBUFFERINDEX, &audioBufferIndex);
 }
 
 OEUInt16 ADCDAC::read16(OEAddress address)
