@@ -1,4 +1,5 @@
 ==2011-09==
+* Implemented ControlBus::setCPUClockMultiplier
 * Fixed control bus
 
 ==2011-08==
